--- a/app/startup/components/start.module.css
+++ b/app/startup/components/start.module.css
@@ -1,10 +1,12 @@
 .card {
     background-color: var(--mantine-color-body);
-    max-width: 500px;
-    max-height: 600px;
+    min-width: 200px;
+   
   }
   
   .imageSection {
+    min-width: 250px;
+    min-height: 250px;
     padding: var(--mantine-spacing-md);
     display: flex;
     align-items: center;
