--- a/app/startup/components/start.module.css
+++ b/app/startup/components/start.module.css
@@ -6,13 +6,14 @@
   }
   
   .imageSection {
-    min-width: 250px;
-    min-height: 300px;
+    position: relative;
+    
     padding: var(--mantine-spacing-md);
     display: flex;
     align-items: center;
     justify-content: center;
     border-bottom: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+    
   }
   
   .label {
